--- a/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,58 @@
     android:backgroundTint="#474141"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/error"
+    <ImageView
+        android:id="@+id/LogInBackgroundImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/pexels_ivan_bertolazzi_2681405" />
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="186dp"
+        android:layout_height="134dp"
         android:text=""
         android:textColor="#FF0000"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/LogInBackgroundImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/Title"
+    <Button
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to the Online Art Gallery!"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/loginButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:onClick="login"
+        android:text="@string/login_button"
+        app:layout_constraintBottom_toTopOf="@id/username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="0.339" />
+
+    <Button
+        android:id="@+id/signupButton"
+        android:layout_width="123dp"
+        android:layout_height="88dp"
+        android:onClick="signup"
+        android:text="@string/signup_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.774" />
 
     <EditText
         android:id="@+id/username"
@@ -63,30 +91,17 @@
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
         tools:layout_editor_absoluteX="-16dp" />
 
-    <Button
-        android:id="@+id/loginButton"
+    <TextView
+        android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="login"
-        android:text="@string/login_button"
-        app:layout_constraintBottom_toTopOf="@id/username"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.339" />
-
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="123dp"
-        android:layout_height="88dp"
-        android:onClick="signup"
-        android:text="@string/signup_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.774" />
+        android:background="@color/purple_500"
+        android:text="Welcome to the Online Art Gallery!"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/loginButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
