--- a/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
@@ -6,4 +6,75 @@
     android:layout_height="match_parent"
     tools:context=".Browse">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/layout"
+        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+
+                <RelativeLayout
+                    android:id="@+id/relativelayout"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <ImageView
+                        android:id="@+id/myImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="186dp"
+                        app:srcCompat="@drawable/artworks_image" />
+
+                    <TextView
+                        android:id="@+id/myImageViewText"
+                        android:layout_width="410dp"
+                        android:layout_height="51dp"
+                        android:layout_alignLeft="@id/myImageView"
+                        android:layout_alignTop="@id/myImageView"
+                        android:layout_alignRight="@id/myImageView"
+                        android:layout_alignBottom="@id/myImageView"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginTop="137dp"
+                        android:layout_marginEnd="1dp"
+                        android:layout_marginRight="1dp"
+                        android:layout_marginBottom="-2dp"
+                        android:gravity="center"
+                        android:text="Browse Artworks"
+                        android:textColor="#000000" />
+
+                </RelativeLayout>
+
+                <ImageButton
+                    android:id="@+id/imageButton8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/mona_lisa" />
+
+                <ImageButton
+                    android:id="@+id/imageButton9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+                <ImageButton
+                    android:id="@+id/imageButton10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/logo" />
+
+                <ImageButton
+                    android:id="@+id/imageButton11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_launcher_foreground" />
+
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
