--- a/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,34 +45,24 @@
                         android:layout_marginRight="1dp"
                         android:layout_marginBottom="-2dp"
                         android:gravity="center"
-                        android:text="Browse Artworks"
-                        android:textColor="#000000" />
+                        android:text="@string/browse_artworks"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
 
                 </RelativeLayout>
 
-                <ImageButton
-                    android:id="@+id/imageButton8"
+                <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/listview_dessert"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/mona_lisa" />
-
-                <ImageButton
-                    android:id="@+id/imageButton9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-                <ImageButton
-                    android:id="@+id/imageButton10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/logo" />
-
-                <ImageButton
-                    android:id="@+id/imageButton11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:layout_height="match_parent"
+                    android:paddingBottom="50dp"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="50dp"/>
+<!--                    android:paddingBottom="@dimen/activity_vertical_margin"-->
+<!--                    android:paddingLeft="@dimen/activity_horizontal_margin"-->
+<!--                    android:paddingRight="@dimen/activity_horizontal_margin"-->
+<!--                    android:paddingTop="@dimen/activity_vertical_margin" />-->
 
             </LinearLayout>
         </ScrollView>
