--- a/ArtGallery-Android/app/src/main/res/layout/list_item.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:minHeight="?android:attr/listPreferredItemHeight"
@@ -9,18 +9,20 @@
 
     <ImageView
         android:id="@+id/list_item_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_marginLeft="50dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
     <TextView
         android:id="@+id/dessert_name"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="25dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/dessert_number"
+        android:layout_marginLeft="10dp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content" />
