--- a/ArtGallery-Android/app/src/main/res/layout/list_item.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/list_item.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:padding="16dp">
+    tools:context=".Browse">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/list_item_icon"
-        android:layout_marginLeft="50dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        <ImageButton
+            android:id="@+id/list_item_icon"
+            android:layout_marginLeft="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:onClick="lookupArtwork"
+            />
 
-    <TextView
-        android:id="@+id/dessert_name"
-        android:layout_marginLeft="25dp"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/dessert_name"
+            android:layout_marginLeft="25dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/dessert_number"
-        android:layout_marginLeft="10dp"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/dessert_number"
+            android:layout_marginLeft="10dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
