--- a/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_browse.xml
@@ -11,7 +11,7 @@
         android:id="@+id/relativelayout"
         android:layout_width="420dp"
         android:layout_height="324dp"
-        app:layout_constraintBottom_toTopOf="@id/listview_dessert"
+        app:layout_constraintBottom_toTopOf="@id/listview_artwork"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/listview_dessert"
+        android:id="@+id/listview_artwork"
         android:layout_width="413dp"
         android:layout_height="422dp"
         app:layout_constraintBottom_toBottomOf="parent"
