--- a/ArtGallery-Android/app/src/main/res/layout/activity_buy.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_buy.xml
@@ -13,10 +13,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Return to Browse Artworks"
+        android:text="Return to artwork"
         android:textAlignment="viewStart"
         android:textSize="12sp"
-        android:onClick="browse"/>
+        android:onClick="returnToArtwork" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -77,26 +77,12 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Wanderer above the Sea of Fog, also known as Wanderer above the Mist or Mountaineer in a Misty Landscape, is an oil painting c. 1818 by the German Romantic artist Caspar David Friedrich. It has been considered one of the masterpieces of Romanticism."
-                android:textAlignment="viewStart"
-                android:textSize="12sp" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/favourites_image_jpg" />
-
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/buy_image_jpg"
-                android:onClick="buy" />
+                app:srcCompat="@drawable/buy_image_jpg" />
+
         </LinearLayout>
     </ScrollView>
 
