--- a/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
@@ -28,24 +28,22 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/list_item_icon"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/mona_lisa" />
+                android:layout_height="match_parent" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/artwork_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Artwork Name"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/artwork_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Artist Name"
                 android:textAlignment="center"
                 android:textSize="18sp" />
 
@@ -97,6 +95,13 @@
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/buy_image_jpg"
                 android:onClick="buy" />
+
+            <Button
+                android:id="@+id/delivery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
