--- a/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
@@ -51,25 +51,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50sp"
             android:backgroundTint="@color/white"
-            android:drawableLeft="@drawable/magnifier_small"
+            android:drawableLeft="@drawable/magnifier"
+            android:onClick="browse"
             android:text="Browse"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="30sp"
-            android:onClick="browse"/>
+            android:textSize="30sp" />
+
         <Button
             android:id="@+id/buttonProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/buttonBrowse"
-            android:layout_marginTop="50sp"
+            android:layout_marginTop="25sp"
             android:backgroundTint="@color/white"
-            android:drawableLeft="@drawable/magnifier_small"
+            android:drawableLeft="@drawable/profile"
+            android:onClick="profile"
             android:text="Profile"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="30sp"
-            android:onClick="profile"/>
+            app:layout_constraintTop_toBottomOf="@+id/buttonBrowse" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
