--- a/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_home.xml
@@ -8,8 +8,8 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="396dp"
-        android:layout_height="222dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_marginBottom="564dp"
         app:layout_constraintBottom_toTopOf="@+id/buttons"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="42dp"
+            android:layout_marginBottom="35dp"
             android:gravity="center"
             android:text="@string/home"
             android:textAllCaps="true"
@@ -40,7 +40,7 @@
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="match_parent"
-        android:layout_height="567dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
@@ -49,7 +49,6 @@
             android:id="@+id/buttonBrowse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50sp"
             android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/magnifier"
             android:onClick="browse"
@@ -62,7 +61,7 @@
             android:id="@+id/buttonProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25sp"
+            android:layout_marginTop="5sp"
             android:backgroundTint="@color/white"
             android:drawableLeft="@drawable/profile"
             android:onClick="profile"
