edit profile + put

--- a/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/nameText"
         android:layout_width="143dp"
         android:layout_height="40dp"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/descriptionText"
         android:layout_width="326dp"
         android:layout_height="95dp"
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
-    <TextView
+    <EditText
         android:id="@+id/phoneNumberText"
         android:layout_width="154dp"
         android:layout_height="44dp"
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
 
-    <TextView
+    <EditText
         android:id="@+id/emailText"
         android:layout_width="151dp"
         android:layout_height="35dp"
@@ -45,5 +45,20 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />
+
+    <Button
+        android:id="@+id/profileUpdateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="126dp"
+        android:layout_marginTop="552dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="131dp"
+        android:onClick="updateProfile"
+        android:text="Update Profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
