--- a/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
         android:layout_height="88dp"
         android:onClick="signup"
         android:text="@string/signup_button"
+        app:iconTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
