--- a/ArtGallery-Android/app/src/main/res/layout/activity_list_item.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_list_item.xml
@@ -10,7 +10,7 @@
     android:padding="16dp">
 
         <ImageView
-            android:id="@+id/list_item_icon"
+            android:id="@+id/artwork_picture"
             android:layout_marginLeft="50dp"
             android:layout_width="100dp"
             android:layout_height="100dp" />
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/artwork_number"
+            android:id="@+id/artwork_artist"
             android:layout_marginLeft="10dp"
             android:layout_width="0dp"
             android:layout_weight="1"
