--- a/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
@@ -65,6 +65,7 @@
         android:id="@+id/artworksButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="goToArtwork"
         android:text="@string/artworks_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
