--- a/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_artwork.xml
@@ -87,6 +87,7 @@
                 android:id="@+id/favouriteButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="favorite"
                 app:srcCompat="@drawable/favourites_image_jpg" />
 
             <RadioGroup
