--- a/ArtGallery-Android/app/src/main/res/layout/activity_buy.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_buy.xml
@@ -10,7 +10,7 @@
     android:visibility="visible">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/returnButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Return to artwork"
