--- a/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
+++ b/ArtGallery-Android/app/src/main/res/layout/activity_profile.xml
@@ -4,72 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DDD8CC"
     tools:context=".ProfileActivity">
 
-    <EditText
-        android:id="@+id/nameText"
-        android:layout_width="143dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="204dp"
-        android:text="TextView"
+    <Button
+        android:id="@+id/returnButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#AF9B5F"
+        android:text="@string/returnButton2"
+        android:onClick="returnToLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/descriptionText"
-        android:layout_width="326dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameText" />
-
-    <EditText
-        android:id="@+id/phoneNumberText"
-        android:layout_width="154dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
-
-    <EditText
-        android:id="@+id/emailText"
-        android:layout_width="151dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="28dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />
-
-    <Button
-        android:id="@+id/profileUpdateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="126dp"
-        android:layout_marginTop="552dp"
-        android:layout_marginEnd="126dp"
-        android:layout_marginBottom="131dp"
-        android:onClick="updateProfile"
-        android:text="Update Profile"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/artworksButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="goToArtwork"
-        android:text="@string/artworks_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileUpdateButton" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#DDD8CC"
+            app:srcCompat="@drawable/default_avatar" />
+
+        <EditText
+            android:id="@+id/nameText"
+            android:layout_width="143dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="TextView" />
+
+        <EditText
+            android:id="@+id/descriptionText"
+            android:layout_width="326dp"
+            android:layout_height="95dp"
+            android:gravity="center"
+            android:text="TextView" />
+
+        <EditText
+            android:id="@+id/phoneNumberText"
+            android:layout_width="154dp"
+            android:layout_height="44dp"
+            android:gravity="center"
+            android:text="TextView" />
+
+        <EditText
+            android:id="@+id/emailText"
+            android:layout_width="151dp"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/profileUpdateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#AF9B5F"
+            android:gravity="center"
+            android:onClick="updateProfile"
+            android:text="Update Profile" />
+
+        <Button
+            android:id="@+id/artworksButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:gravity="center"
+            android:onClick="goToArtwork"
+            android:text="@string/artworks_button" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
